--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="btn d-none d-md-block btn-outline-secondary">Register</button>
+        <button type="button" class="btn d-none d-lg-block btn-outline-secondary">Register</button>
       </div>
     </nav>
     <!-- menu area -->
 
     <!-- banner area -->
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel banner-sec carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -57,7 +57,7 @@
           <img src="images/cover/h2-1.jpg" class="d-block my-img w-100" alt="...">
           <div class="carousel-caption b-carousel-caption top-0 start-0 end-0 bottom-0 pt-0 pb-0 d-flex justify-content-center flex-column align-items-center">
               <h1 class="fw-bold text-white">Get Started Digital <span class="d-block">Learning</span></h1>
-              <p class="text-white w-50 mx-auto">We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of your moment,</p>
+              <p class="text-white w-50 mx-auto lg">We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of your moment,</p>
               <a href="#" class="btn bg-info btn-primary px-4 fw-bold" tabindex="-1" role="button" aria-disabled="true">Get Started</a>
   
           </div>
@@ -65,7 +65,7 @@
         <div class="carousel-item" data-bs-interval="10000000000">
           <img src="images/cover/h2-2.jpg" class="d-block my-img w-100" alt="...">
           <div class="carousel-caption b-carousel-caption top-0 start-0 end-0 bottom-0 pt-0 pb-0 d-flex justify-content-center flex-column align-items-center">
-            <h1 class="fw-bold text-white">Get Started Digital Learning</h1>
+            <h1 class="fw-bold text-white">Get Started Digital <span class="d-block">Learning</span></h1>
               <p class="text-white w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
               <a href="#" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Get Started</a>
           </div>
@@ -73,7 +73,7 @@
         <div class="carousel-item">
           <img src="images/cover/h2-1.jpg" class="d-block my-img w-100" alt="...">
           <div class="carousel-caption b-carousel-caption top-0 start-0 end-0 bottom-0 pt-0 pb-0 d-flex justify-content-center flex-column align-items-center">
-            <h1 class="fw-bold text-white">Get Started Digital Learning</h1>
+            <h1 class="fw-bold text-white">Get Started Digital <span class="d-block">Learning</span></h1>
               <p class="text-white w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
               <a href="#" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Get Started</a>
           </div>
@@ -236,7 +236,7 @@
             </div>
           </div>
           <!-- single item -->
-          <div class="card mb-4">
+          <div class="card mb-4 d-none d-md-block">
             <img src="images/course/course-4.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title fw-bold">Digital Marketing</h5>
@@ -245,7 +245,7 @@
             </div>
           </div>
            <!-- single item -->
-           <div class="card mb-4">
+           <div class="card mb-4 d-none d-md-block">
             <img src="images/course/course-5.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title fw-bold">Photography Basic Rules</h5>
@@ -254,7 +254,7 @@
             </div>
           </div>
           <!-- single item -->
-          <div class="card mb-4">
+          <div class="card mb-4 d-none d-md-block">
             <img src="images/course/course-5.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title fw-bold">Motion Graphics</h5>
@@ -275,14 +275,11 @@
     <section class="ready-to-join-area p-5">
       <div class="container">
         <div class="">
-          <div class="row justify-content-between align-items-center bg-info p-5 rounded">
-            <div class="col-lg-6">
-              <div>
+          <div class="d-flex justify-content-between flex-lg-row flex-column align-items-center bg-info p-3 p-md-5 rounded">
+              <div class="text-lg-start text-center mb-lg-0 mb-4">
                 <h2 class="text-white fw-semibold">Ready to join?</h2>
                 <div class="card-text text-white">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</div>
               </div>
-            </div>
-            <div class="col-lg-6 text-end mt-3">
               <div>
                 <!-- Button trigger modal -->
                 <button type="button" class="btn bg-white text-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -297,7 +294,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <p>To start your registration with TPI Education, first provide a few details below, and then the right consultant in the right location will be in contact shortly.</p>
+                        <p class="text-start mb-0">To start your registration with TPI Education, first provide a few details below, and then the right consultant in the right location will be in contact shortly.</p>
                       </div>
                       <div class="modal-footer">
                       </div>
@@ -306,7 +303,6 @@
                 </div>
     
               </div>
-            </div>
           </div>
 
         </div>
@@ -381,7 +377,7 @@
     <!-- faq area -->
 
     <!-- brand area -->
-    <section class="d-none d-lg-block brand-area py-5">
+    <section class="d-none d-lg-block brand-area pb-5">
       <div class="container">
         <div class="common-heading mx-5 text-center mb-4">
           <h1 class="fw-bold text-black mb-0">Trusted by over 800+ companies</h1>
