card font & color change

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -147,7 +147,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Fullstack Web Development</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -164,7 +164,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Digital Marketing</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -181,7 +181,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Photography Basic Rules</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -198,7 +198,7 @@
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Motion Graphics</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+                      <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
           <!-- single item -->
@@ -223,7 +223,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
           <!-- single item -->
@@ -232,7 +232,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Fullstack Web Development</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
           <!-- single item -->
@@ -241,7 +241,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Digital Marketing</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
            <!-- single item -->
@@ -250,7 +250,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Photography Basic Rules</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
           <!-- single item -->
@@ -259,7 +259,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Motion Graphics</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <p class="card-text"><small class="text-muted">Price : 20$</small></p>
+              <p class="card-text text-info fw-bold"><small class="text-muted">Price : 20$</small></p>
             </div>
           </div>
 
