course more & view all responsive change

--- a/index.html
+++ b/index.html
@@ -265,7 +265,14 @@
 
         </div>
         <div class="text-center pt-3">
-          <a href="#" class="btn border-light bg-info btn-primary px-4 fw-bold" tabindex="-1" role="button" aria-disabled="true">See More Courses</a>
+          <div class="d-none d-lg-block">
+            <a href="#" class=" btn border-light bg-info btn-primary px-4 fw-bold" tabindex="-1" role="button" aria-disabled="true">See More Courses</a>
+          </div>
+
+          <div class="d-block d-lg-none">
+            <a href="#" class="btn border-light bg-info btn-primary px-4 fw-bold" tabindex="-1" role="button" aria-disabled="true">View All</a>
+          </div>
+
         </div>
       </div>
     </section>
