--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <div class="container">
       <div class="text-center">
         <h2 class="text-white">TPI-EDU</h2>
-        <p class="d-block text-white mb-0">Dhaka - Mymensingh Highway, Mahona Bhabanipur 1740, Bangladesh</p>
+        <p class="d-block text-white mb-0">Mymensingh Highway, Mahona Bhabanipur 1740, Dhaka Bangladesh</p>
         <p class="text-white">Privacy Ploicy  |   Terms of use</p>
         <ul class="social-links d-flex list-unstyled justify-content-center mb-0">
           <li><a target="_blank" href="https://www.facebook.com/"><i class="fa-brands text-white fa-facebook-f"></i></a></i></li>
