--- a/index.html
+++ b/index.html
@@ -389,23 +389,23 @@
         <div class="common-heading mx-5 text-center mb-4">
           <h1 class="fw-bold text-black mb-0">Trusted by over 800+ companies</h1>
         </div>
-        <div class="d-flex justify-content-around align-items-center">
-          <div class="mx-4">
+        <div class="d-flex justify-content-around flex-wrap align-items-center">
+          <div class="mx-4 my-2">
             <img src="images/company/company-1.png" alt="">
           </div>
-          <div class="mx-4">
+          <div class="mx-4 my-2">
             <img src="images/company/company-2.png" alt="">
           </div>
-          <div class="mx-4">
+          <div class="mx-4 my-2">
             <img src="images/company/company-3.png" alt="">
           </div>
-          <div class="mx-4">
+          <div class="mx-4 my-2">
             <img src="images/company/company-4.png" alt="">
           </div>
           <div class="mx-4">
             <img src="images/company/company-5.png" alt="">
           </div>
-          <div class="mx-4">
+          <div class="mx-4 my-2">
             <img src="images/company/company-6.png" alt="">
           </div>
         </div>
@@ -419,12 +419,12 @@
       <div class="text-center">
         <h2 class="text-white">TPI-EDU</h2>
         <p class="d-block text-white mb-0">Mymensingh Highway, Mahona Bhabanipur 1740, Dhaka Bangladesh</p>
-        <p class="text-white">Privacy Ploicy  |   Terms of use</p>
+        <p class="text-white">Privacy Ploicy | Terms of use</p>
         <ul class="social-links d-flex list-unstyled justify-content-center mb-0">
-          <li><a target="_blank" href="https://www.facebook.com/"><i class="fa-brands text-white fa-facebook-f"></i></a></i></li>
-          <li><a target="_blank" href="https://twitter.com/"><i class="fa-brands text-white fa-twitter"></i></a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/"><i class="fa-brands text-white fa-linkedin-in"></i></a></li>
-          <li><a target="_blank" href="https://www.tiktok.com/"><i class="fa-brands text-white  fa-tiktok"></i></a></li>
+          <li><a target="_blank" href="https://www.facebook.com"><i class="fa-brands text-white fa-facebook-f"></i></a></i></li>
+          <li><a target="_blank" href="https://twitter.com"><i class="fa-brands text-white fa-twitter"></i></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com"><i class="fa-brands text-white fa-linkedin-in"></i></a></li>
+          <li><a target="_blank" href="https://www.tiktok.com"><i class="fa-brands text-white  fa-tiktok"></i></a></li>
         </ul>
       </div>
     </div>
