--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000000000">
+        <div class="carousel-item active" data-bs-interval="10000">
           <img src="images/cover/h2-1.jpg" class="d-block my-img w-100" alt="...">
           <div class="carousel-caption b-carousel-caption top-0 start-0 end-0 bottom-0 pt-0 pb-0 d-flex justify-content-center flex-column align-items-center">
               <h1 class="fw-bold text-white">Get Started Digital <span class="d-block">Learning</span></h1>
@@ -62,7 +62,7 @@
   
           </div>
         </div>
-        <div class="carousel-item" data-bs-interval="10000000000">
+        <div class="carousel-item" data-bs-interval="2000">
           <img src="images/cover/h2-2.jpg" class="d-block my-img w-100" alt="...">
           <div class="carousel-caption b-carousel-caption top-0 start-0 end-0 bottom-0 pt-0 pb-0 d-flex justify-content-center flex-column align-items-center">
             <h1 class="fw-bold text-white">Get Started Digital <span class="d-block">Learning</span></h1>
